--- a/footer.html
+++ b/footer.html
@@ -15,14 +15,14 @@
 <body>
     <!-- footer -->
     <footer class="footer">
-        <a href="#Z" id="AZ" title="下方功能區塊" accesskey="Z"></a>
+        <a href="#Z" id="AZ" title="下方功能區塊" accesskey="Z">:::</a>
         <div class="container">
             <div class="contact">
                 <div class="block">
                     <p class="web-title">人民陳情列管案件管理平台</p>
                     <div class="link-gp">
-                        <a href="" title="隱私權宣告">隱私權宣告</a>
-                        <a href="" title="政府網站資料開放宣告">政府網站資料開放宣告</a>
+                        <a href="private.html" title="隱私權宣告">隱私權宣告</a>
+                        <a href="information.html" title="政府網站資料開放宣告">政府網站資料開放宣告</a>
                     </div>
                     <p>版權所有 © 國立故宮博物院</p>
                 </div>
@@ -45,7 +45,6 @@
                         <img src="img/aa2.png" alt="無障礙標章logo"></a>
                 </div> -->
             </div>
-        </div>
         </div>
     </footer>
 
