--- a/header.html
+++ b/header.html
@@ -35,17 +35,17 @@
             <div class="bottom">
                 <div class="nav-gp">
                     <div class="nav-function">
-                        <a href="case-manage.html" title="案件登錄" class="">
+                        <a href="case-apply.html" title="案件登錄" class="">
                             案件登錄
                         </a>
                     </div>
                     <div class="nav-function">
-                        <a href="regulation.html" title="案件查詢">
+                        <a href="case-search.html" title="案件查詢">
                             案件查詢
                         </a>
                     </div>
                     <div class="nav-function">
-                        <a href="operating-instruction.html" title="說明事項">
+                        <a href="description.html" title="說明事項">
                             說明事項
                         </a>
                     </div>
@@ -57,13 +57,13 @@
                 <div class="fas fa-bars">
                 </div>
                 <ul class="nav navbar-nav">
-                    <li><a href="tax-break.html" title="案件登錄">
+                    <li><a href="case-apply.html" title="案件登錄">
                             案件登錄
                         </a></li>
-                    <li> <a href="separate-taxation.html" title="案件查詢">
+                    <li> <a href="case-search.html" title="案件查詢">
                             案件查詢
                         </a></li>
-                    <li><a href="member.html" title="說明事項">說明事項</a></li>
+                    <li><a href="description.html" title="說明事項">說明事項</a></li>
                 </ul>
             </div>
             <div class="logo">
