--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- navbar -->
     <header id="header"></header>
     <main>
-        <a href="#C" title="中央內容區塊" id="AC" accesskey="C"></a>
+        <a href="#C" title="中央內容區塊" id="AC" accesskey="C">:::</a>
         <section class="content-index container">
             <div class="card">
                 <h2>說明事項</h2>
@@ -36,8 +36,24 @@
                 </div>
             </div>
             <div class="type-gp">
-                <div class="card"></div>
-            <div class="card"></div>
+                <div class="card">
+                    <div class="left">
+                        <img src="img/icon-apply.png" alt="案件申請icon">
+                        <h2>案件登錄</h2>
+                    </div>
+                    <div class="right">
+                        <p>填寫想對故宮博物院陳情的案件內容，需留下聯絡資訊</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="left">
+                        <img src="img/icon-search.png" alt="案件查詢icon">
+                        <h2>案件查詢</h2>
+                    </div>
+                    <div class="right">
+                        <p>輸入案件編號及 Email，查詢已申請案件的處理進度</p>
+                    </div>
+                </div>
             </div>
         </section>
 
