--- a/header.html
+++ b/header.html
@@ -30,22 +30,34 @@
                 <div class="right">
                     <a href="#U" id="AU" title="右上方功能區塊" accesskey="U">:::</a>
                     <a href="webmap.html" class="icon-btn" title="網站導覽"><i class="fas fa-sitemap"></i></a>
+                    <div class="btn-group">
+                        <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            <i class="fas fa-globe"></i>Language
+                        </button>
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <button class="dropdown-item" type="button">中文</button>
+                            <button class="dropdown-item" type="button">English</button>
+                            <button class="dropdown-item" type="button">日本語</button>
+                            <button class="dropdown-item" type="button">한국어</button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="bottom">
                 <div class="nav-gp">
                     <div class="nav-function">
-                        <a href="case-apply.html" title="案件登錄" class="">
+                        <a href="case-apply.html" title="案件登錄" class="menu-title" id="menu1">
                             案件登錄
                         </a>
                     </div>
                     <div class="nav-function">
-                        <a href="case-search.html" title="案件查詢">
+                        <a href="case-search.html" title="案件查詢"  class="menu-title"  id="menu2">
                             案件查詢
                         </a>
                     </div>
                     <div class="nav-function">
-                        <a href="description.html" title="說明事項">
+                        <a href="description.html" title="說明事項"  class="menu-title"  id="menu2">
                             說明事項
                         </a>
                     </div>
@@ -64,6 +76,27 @@
                             案件查詢
                         </a></li>
                     <li><a href="description.html" title="說明事項">說明事項</a></li>
+                    <li><a href="webmap.html" title="網站導覽">網站導覽</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false" title="Language">
+                            Language
+                        </a>
+                        <div class="dropdown-menu shadow-lg">
+                            <a class="dropdown-item" href="" title="中文">
+                                中文
+                            </a>
+                            <a class="dropdown-item" href="" title="English">
+                                English
+                            </a>
+                            <a class="dropdown-item" href="" title="日本語">
+                                日本語
+                            </a>
+                            <a class="dropdown-item" href="" title="한국어">
+                                한국어
+                            </a>
+                        </div>
+                    </li>
                 </ul>
             </div>
             <div class="logo">
