--- a/information.html
+++ b/information.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/logo_32x32.ico" type="image/x-icon">
     <title>政府網站資料開放宣告</title>
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="fontawesome-free/css/all.min.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="scss/bootstrap.4.2.css">
-    <!-- swiper輪播 -->
-    <link rel="stylesheet" href="scss/swiper-bundle.min.css">
     <!-- our css -->
     <link rel="stylesheet" href="scss/style.css">
 
@@ -21,19 +20,19 @@
     <header id="header"></header>
 
     <main>
+        <a href="#C" title="中央內容區塊" id="AC" accesskey="C">:::</a>
+        <!-- breadcrumb -->
+        <div class="breadcrumb">
+            <div class="container">
+                <ul>
+                    <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+                    <li>></li>
+                    <li><span>政府網站資料開放宣告</span></li>
+                </ul>
+            </div>
+        </div>
         <!-- Banner -->
         <section class="content-normal container p-0">
-            <a href="#C" title="中央內容區塊" id="AC" accesskey="C">:::</a>
-            <!-- breadcrumb -->
-            <div class="breadcrumb">
-                <div class="container">
-                    <ul>
-                        <li><a href="index.html"><i class="fas fa-home"></i></a></li>
-                        <li>></li>
-                        <li><span>政府網站資料開放宣告</span></li>
-                    </ul>
-                </div>
-            </div>
             <h2>政府網站資料開放宣告</h2>
             <div class="card">
                 <h3>授權方式及範圍</h3>
@@ -70,9 +69,6 @@
 
     <!-- jquery -->
     <script src="js/jquery.min.js"></script>
-
-    <!-- bootstrap -->
-    <script src="js/bootstrap.bundle.min.js"></script>
 
 
     <!-- 引入html header&footer -->
