--- a/private.html
+++ b/private.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/logo_32x32.ico" type="image/x-icon">
     <title>隱私權保護政策</title>
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="fontawesome-free/css/all.min.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="scss/bootstrap.4.2.css">
-    <!-- swiper輪播 -->
-    <link rel="stylesheet" href="scss/swiper-bundle.min.css">
     <!-- our css -->
     <link rel="stylesheet" href="scss/style.css">
 
@@ -39,7 +38,6 @@
                 <p>
                     非常歡迎您光臨國立故宮博物院網站（以下簡稱本院），本院在此聲明尊重並依法保護您個人的隱私權。為了讓您能夠更安心的使用本網站所提供的各項服務，並透明化本網站如何蒐集、應用及保護您所提供的個人資料，特此向您說明本網站的隱私權保護政策如下：
                 </p>
-
                 <h3>
                     個人資料之蒐集政策
                 </h3>
@@ -48,15 +46,12 @@
                 </p>
                 <p>當您使用本網站所提供的各項線上申請服務（含本院各項教推活動線上報名、網路調查、或其他相關服務），需申請人提供個人資料時，我們可能會依案件辦理需求，請您提供姓名、身分證字號、聯絡電話、電子郵件、地址等個人資料。（資料運用請續見2.本網站上述蒐集資料之運用政策）。
                 </p>
-
                 <p class="title">關於網站瀏覽之資料蒐集</p>
                 <p>若您僅是造訪本網站，查詢、下載本院資料及其他服務資訊、閱讀本院報告、或取得最新消息及其他有附加價值的服務資訊，本網站不會蒐集任何有關個人的身分資料，僅保留使用者在網站瀏覽時，由網站伺服器產生的系統紀錄(LOG)，包含連線設備IP位址、使用的瀏覽器、使用時間以及在網站內所瀏覽的網頁等資料。這些紀錄保留目的，其一係供本院作整體網站流量和網路行為總量分析，以利於提昇本網站的服務品質之用，並不會對個別使用者進行對應與分析，其二係為維護管理本網站資訊安全，保障使用者權益。
                 </p>
-
                 <p class="title">關於本政策之適用範圍</p>
                 <p>本隱私權保護政策，適用於您在本網站活動時，所涉及的個人資料蒐集、運用與保護，但不適用於與本網站功能連結，由其他機關、團體、公司經營的網站。這些連結網站均有其專屬的隱私權保護政策，本網站隱私權保護政策不適用於其資料處理措施。
                 </p>
-
                 <h3>本網站上述蒐集資料之運用政策 </h3>
                 <p class="title">個人資料之運用方式</p>
                 <p>本網站所蒐集的個人資料（諸如姓名、身分證字號、聯絡電話、電子郵件、地址，以及一般背景及辨識資料），將依其蒐集之特定目的，做為活動報名依據、報名完成通知及後續聯繫、答覆問題及抽獎結果通知、民意調查分析及活動成果分析、本院業務範圍內運用…等之用。
@@ -64,7 +59,6 @@
                 <p class="title">個人資料之保全</p>
                 <p>當您提供個人資料予本院，除法律或中央主管機關另有規定外，非經您同意，本院將不會向任何第三人揭露（共享、出售或洩露）您提供予本院的個人資料。本院將依本院一慣採取的嚴格安全保密準則，保有此等資料。本網站任何個人資料的網路傳遞皆經過SSL的加密機制，以確保資料在傳輸過程中不被第三者非法擷取。
                 </p>
-
                 <p class="title">個人資料之請求刪除權利</p>
                 <p>您可依中華民國「個人資料保護法」，就您的個人資料行使以下權利：</p>
                 <ol>
@@ -84,7 +78,7 @@
                         請求刪除。
                     </li>
                 </ol>
-                <p>但本院各單位因執行職務或業務所必需者，本院得拒絕您上述之請求。且因您行使上述權利，而導致權益受損時，本院將不負相關賠償責任。如有刪除請求，請來信聯繫</p>
+                <p>但本院各單位因執行職務或業務所必需者，本院得拒絕您上述之請求。且因您行使上述權利，而導致權益受損時，本院將不負相關賠償責任。如有刪除請求，請來信聯繫。</p>
                 <h3>Cookie的運用與政策</h3>
                 <p>為提供更貼切的服務，本院在網路使用cookie。所謂cookie，係指一小則可讀取的資訊，其係由一網站將其儲存於您個人電腦網站瀏覽器內，並只有原設置cookie的網站能讀取其內容。本院使用cookies主要基於輔助作用，儲存您偏好的特定種類資料。大部分cookies的有效性只持續一定期間或只限單次造訪不含任何能使他人與您聯絡之資料。您可在您的網站瀏覽器上設定功能以便在每次要求設置cookies時通知您。
                 </p>
@@ -105,9 +99,6 @@
 
     <!-- jquery -->
     <script src="js/jquery.min.js"></script>
-
-    <!-- bootstrap -->
-    <script src="js/bootstrap.bundle.min.js"></script>
 
 
     <!-- 引入html header&footer -->
