--- a/case-search.html
+++ b/case-search.html
@@ -37,7 +37,7 @@
                     <ul>
                         <li>請輸入以下建立案件時所設定的相關資訊，以供資料調閱及查詢辦理情形，謝謝!!</li>
                     </ul>
-                    <!-- <div class="form-gp">
+                    <div class="form-gp">
                         <label for="email">Email<span class="notice">*</span></label>
                         <input type="email" name="email" id="email" placeholder="請輸入Email">
                     </div>
@@ -55,9 +55,10 @@
                             <button name="audio" id="btn_Voice2" class="btnPlayAudio" onclick="PlayVoice();"
                                 title="播放驗證碼語音" type="button"><i class="fas fa-volume-up"></i></button>
                         </div>
-                    </div> -->
+                    </div>
 
                     <div class="btn-tool">
+                        <!-- <input type="submit" value="送出申請" class="submit"> -->
                         <input type="submit" value="送出申請" class="submit">
                     </div>
                 </form>
@@ -88,9 +89,6 @@
         window.onload = function () {
             document.getElementById('menu2').className += " active";
         }
-        // document.addEventListener("DOMContentLoaded", function () {
-        //     document.getElementById('menu2').className += " active";
-        // });
     </script>
 
 
