--- a/description.html
+++ b/description.html
@@ -70,6 +70,13 @@
         });
     </script>
 
+    <!-- header active -->
+    <script>
+        window.onload = function () {
+            document.getElementById('menu3').className += " active";
+        }
+    </script>
+
 
 </body>
 
