--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="type-gp">
-                <div class="card">
+                <a class="card" href="case-apply.html" title="案件申請">
                     <div class="left">
                         <img src="img/icon-apply.png" alt="案件申請icon">
                         <h2>案件登錄</h2>
@@ -42,8 +42,8 @@
                     <div class="right">
                         <p>填寫想對故宮博物院陳情的案件內容，需留下聯絡資訊</p>
                     </div>
-                </div>
-                <div class="card">
+                </a>
+                <a class="card" href="case-search.html" title="案件查詢">
                     <div class="left">
                         <img src="img/icon-search.png" alt="案件查詢icon">
                         <h2>案件查詢</h2>
@@ -51,7 +51,7 @@
                     <div class="right">
                         <p>輸入案件編號及 Email，查詢已申請案件的處理進度</p>
                     </div>
-                </div>
+                </a>
             </div>
         </section>
 
