--- a/case-apply.html
+++ b/case-apply.html
@@ -114,7 +114,7 @@
                         <div class="item">
                             <input type="checkbox" value="" id="private-agree">
                             <label for="private-agree">
-                                <span>我同意</span> <a href="private.html" target="_blank">隱私權宣告</a><span
+                                <span>我同意</span> <a href="private.html" target="_blank" title="[另開視窗]隱私權宣告">隱私權宣告</a><span
                                     class="notice">*</span>
                             </label>
                         </div>
