--- a/case-search.html
+++ b/case-search.html
@@ -48,7 +48,7 @@
                     <div class="code-gp">
                         <label for="code">驗證碼<span class="notice">*</span></label>
                         <div class="text-gp">
-                            <input class="code" type="text" name="code" id="code2">
+                            <input class="code" type="text" name="code" id="code">
                             <img class="RP" src="img/RandomPic_ForLogin.jpg" alt="圖片驗證碼">
                             <button name="reform" id="reform2" class="reform" onclick="" title="重新整理"
                                 type="button"><i class="fas fa-sync-alt"></i></button>
