--- a/sign-up-success.html
+++ b/sign-up-success.html
@@ -20,7 +20,7 @@
     <header id="header"></header>
 
     <main>
-        <a href="#C" title="中央內容區塊" id="AC" accesskey="C"></a>
+        <a href="#C" title="中央內容區塊" id="AC" accesskey="C">:::</a>
         <!-- 登錄成功 -->
         <section class="content-apply-success">
             <div class="container">
