--- a/sign-up-success.html
+++ b/sign-up-success.html
@@ -34,6 +34,9 @@
         </section>
     </main>
 
+    <!-- footer -->
+    <footer id="footer"></footer>
+
     <!-- jquery -->
     <script src="js/jquery.min.js"></script>
 
@@ -44,6 +47,7 @@
     <script>
         $(function () {
             $("#header").load('header.html');
+            $("#footer").load("footer.html");
         });
     </script>
 
