--- a/footer.html
+++ b/footer.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="contact">
                 <div class="block">
-                    <p class="web-title">人民陳情列管案件管理平台</p>
+                    <p class="web-title">民眾意見案件管理系統</p>
                     <div class="link-gp">
                         <a href="private.html" title="隱私權宣告">隱私權宣告</a>
                         <a href="information.html" title="政府網站資料開放宣告">政府網站資料開放宣告</a>
