--- a/header.html
+++ b/header.html
@@ -25,7 +25,7 @@
             <div class="top">
                 <a href="index.html" class="logo" title="首頁">
                     <img src="img/brand.gif" alt="logo">
-                    <h1>人民陳情列管案件管理平台</h1>
+                    <h1>民眾意見案件管理系統</h1>
                 </a>
                 <div class="right">
                     <a href="#U" id="AU" title="右上方功能區塊" accesskey="U">:::</a>
@@ -102,7 +102,7 @@
             <div class="logo">
                 <img src="img/brand.gif" alt="logo">
                 <a href="index.html" title="首頁">
-                    <h1 class="title">人民陳情列管案件管理平台</h1>
+                    <h1 class="title">民眾意見案件管理系統</h1>
                 </a>
             </div>
         </div>
