--- a/sms-verification.html
+++ b/sms-verification.html
@@ -33,6 +33,8 @@
                         <input type="text" name="sms-num" id="sms-num" placeholder="請輸入簡訊驗證碼">
                     </div>
                     <div class="btn">
+                        <!-- <input type="button" value="重新發送簡訊"> -->
+                        <button type="button">重新發送簡訊<span class="time">60s</span></button>
                         <input type="button" value="送出">
                     </div>
                 </form>
