--- a/header.html
+++ b/header.html
@@ -18,7 +18,6 @@
     <div class="for_accessibility">
         <a href="#AC" class="go-main" title="跳到主要內容區塊" tabindex="1">跳到主要內容區塊</a>
     </div>
-    <!-- <img class="bg-img" src="img/bgimg.jpg" alt="底圖"> -->
     <div class="bg-img"></div>
     <nav class="navbar">
         <div class="pc">
@@ -61,6 +60,11 @@
                             說明事項
                         </a>
                     </div>
+                    <div class="nav-function">
+                        <a href="FAQ.html" title="常見問題" class="menu-title" id="menu4">
+                            常見問題
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -76,6 +80,7 @@
                             案件查詢
                         </a></li>
                     <li><a href="description.html" title="說明事項">說明事項</a></li>
+                    <li><a href="FAQ.html" title="常見問題">常見問題</a></li>
                     <li><a href="webmap.html" title="網站導覽">網站導覽</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
