--- a/header.html
+++ b/header.html
@@ -61,9 +61,17 @@
                         </a>
                     </div>
                     <div class="nav-function">
-                        <a href="FAQ.html" title="常見問題" class="menu-title" id="menu4">
+                        <a href="javascript: void(0);" title="常見問題" class="menu-title" id="menu4">
                             常見問題
                         </a>
+                        <div class="nav-list">
+                            <a href="FAQ.html" title="北部院局及全院">
+                                北部院局及全院
+                            </a>
+                            <a href="FAQ.html" title="南部院區">
+                                南部院區
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -81,6 +89,20 @@
                         </a></li>
                     <li><a href="description.html" title="說明事項">說明事項</a></li>
                     <li><a href="FAQ.html" title="常見問題">常見問題</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false" title="常見問題">
+                            常見問題
+                        </a>
+                        <div class="dropdown-menu shadow-lg">
+                            <a class="dropdown-item" href="FAQ.html" title="北部院局及全院">
+                                北部院局及全院
+                            </a>
+                            <a class="dropdown-item" href="FAQ.html" title="南部院區">
+                                南部院區
+                            </a>
+                        </div>
+                    </li>
                     <li><a href="webmap.html" title="網站導覽">網站導覽</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true"
