--- a/FAQ.html
+++ b/FAQ.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/logo_32x32.ico" type="image/x-icon">
-    <title>常見問題-民眾意見案件管理系統</title>
+    <title>常見問題-北部院局及全院-民眾意見案件管理系統</title>
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="fontawesome-free/css/all.min.css">
     <!-- Bootstrap -->
@@ -26,12 +26,12 @@
                 <ul>
                     <li><a href="index.html"><i class="fas fa-home"></i></a></li>
                     <li>></li>
-                    <li><span>常見問題</span></li>
+                    <li><span>常見問題-北部院局及全院</span></li>
                 </ul>
             </div>
         </div>
         <section class="content-FAQ container">
-            <h2>常見問題</h2>
+            <h2>常見問題-北部院局及全院</h2>
             <div class="card">
                 <div class="faq-gp">
                     <div class="searchbar">
