--- a/header.html
+++ b/header.html
@@ -51,8 +51,8 @@
                         </a>
                     </div>
                     <div class="nav-function">
-                        <a href="case-search.html" title="案件查詢" class="menu-title" id="menu2">
-                            案件查詢
+                        <a href="case-search.html" title="回覆與申請案件查詢" class="menu-title" id="menu2">
+                            回覆與申請案件查詢
                         </a>
                     </div>
                     <div class="nav-function">
@@ -84,8 +84,8 @@
                     <li><a href="case-apply.html" title="案件登錄">
                             案件登錄
                         </a></li>
-                    <li> <a href="case-search.html" title="案件查詢">
-                            案件查詢
+                    <li> <a href="case-search.html" title="回覆與申請案件查詢">
+                            回覆與申請案件查詢
                         </a></li>
                     <li><a href="description.html" title="說明事項">說明事項</a></li>
                     <li><a href="FAQ.html" title="常見問題">常見問題</a></li>
