--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                         <p>填寫想對故宮博物院陳情的案件內容，需留下聯絡資訊</p>
                     </div>
                 </a>
-                <a class="card" href="case-search.html" title="案件查詢">
+                <a class="card" href="case-search.html" title="回覆與申請案件查詢">
                     <div class="left">
-                        <img src="img/icon-search.png" alt="案件查詢icon">
-                        <h2>案件查詢</h2>
+                        <img src="img/icon-search.png" alt="回覆與申請案件查詢icon">
+                        <h2>回覆與申請案件查詢</h2>
                     </div>
                     <div class="right">
                         <p>輸入案件編號及 Email，查詢已申請案件的處理進度</p>
