--- a/case-search.html
+++ b/case-search.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/logo_32x32.ico" type="image/x-icon">
-    <title>案件查詢-民眾意見案件管理系統</title>
+    <title>回覆與申請案件查詢-民眾意見案件管理系統</title>
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="fontawesome-free/css/all.min.css">
     <!-- Bootstrap -->
@@ -26,12 +26,12 @@
                 <ul>
                     <li><a href="index.html"><i class="fas fa-home"></i></a></li>
                     <li>></li>
-                    <li><span>案件查詢</span></li>
+                    <li><span>回覆與申請案件查詢</span></li>
                 </ul>
             </div>
         </div>
         <section class="content-apply container">
-            <h2>案件查詢</h2>
+            <h2>回覆與申請案件查詢</h2>
             <div class="card">
                 <form>
                     <ul>
