--- a/digital-apply.html
+++ b/digital-apply.html
@@ -56,7 +56,7 @@
                             </label>
                         </div>
                     </div>
-                     <div class="form-gp choice">
+                    <div class="form-gp choice">
                         <h5>複選項目<span class="notice">*</span></h5>
                         <div class="item-withInput">
                             <input type="checkbox" name="publication" id="publication">
@@ -64,7 +64,21 @@
                                 出版品：出版數量
                             </label>
                             <input type="number" name="publication-qty" id="publication-qty" placeholder="請輸入數量"
-                                    > <span class="unit">冊</span>
+                                class="qty"> <span class="unit">冊</span>
+                        </div>
+                        <div class="item-withInput">
+                            <input type="checkbox" name="publication" id="publication">
+                            <label for="publication">
+                                出版品：出版數量
+                            </label>
+                            <input type="radio" name="state" value="" id="north" checked>
+                            <label for="north">
+                                北部院區 (臺北市)
+                            </label>
+                            <input type="radio" name="state" value="" id="south">
+                            <label for="south">
+                                南部院區 (嘉義縣)
+                            </label>
                         </div>
                     </div>
                     <div class="form-gp">
